fixed list text wrapping

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,7 +27,8 @@ font-size: 2em;}
 text-align: left;
 margin: 30px;}
 
-ul.checkbox-list {list-style-type: none;}
+ul.checkbox-list {list-style-type: none;
+list-style-position: outside;}
 li.checkbox-list {list-style-type: none;}
 
 .my-cool-form {display: flex;
